<resources>
    <string name="app_name">Black Fyre</string>
    <string name="App_Title">BLACK FYRE</string>
    <string name="BlackFyre_Title_Logo">BlackFyre</string>
    <string name="Fire_Of_BlackFire">fireOfBlackFire</string>
    <string name="near_me">Near Me</string>
    <string name="hot_spots">HotSpots</string>
    <string name="the_directory">The Directory</string>
    <string name="AppLogo">App Logo</string>
    <string name="splashImage">splash image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signInWithEmail">email</string>
    <string name="signInWithFacebook">facebook</string>
    <string name="loginInWithGmail">gmail</string>
    <string name="sign_in">Sign in with</string>
    <string name="profile_Image">profileImage</string>
    <string name="userfavorite">User favorite</string>
    <string name="userNameHint">Username/Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="forgotPassword">Forgot password ?</string>
    <string name="signInWithGmail">  Sign In with gmail</string>
    <string name="FaceBookSignIn">Sign in with facebook</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="signup">sign up</string>
    <string name="title_activity_autenticated_user">AutenticatedUser</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigate_to_home">navigate To Home</string>
    <string name="home">home</string>
    <string name="directory_list">directory list</string>
    <string name="navigate_to_near_me">navigate to near me</string>
    <string name="navigate_to_directory">navigate to directory</string>
    <string name="hotspot">Hotspots</string>
    <string name="search">Search</string>
    <string name="search_black_business">Search for black businesses</string>
    <string name="search_hotspot">Search for a hotspot</string>
    <string name="Apply">Apply</string>
</resources>
