<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="400dp"
            android:layout_height="101dp" app:srcCompat="@drawable/ic_blackfyre"
            android:id="@+id/imageView" android:layout_marginTop="204dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:contentDescription="@string/BlackFyre_Title_Logo"
            app:layout_constraintHorizontal_bias="0.275"/>
    <SearchView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_corner_for_search_view_widget"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:id="@+id/searchView2"/>
    <ImageView
            android:layout_width="136dp"
            android:layout_height="89dp" app:srcCompat="@drawable/ic_fireofblackfyre"
            android:id="@+id/imageView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:contentDescription="@string/Fire_Of_BlackFire"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/searchView2"
            android:background="@drawable/layout_boarder">
        <TextView
                android:text="@string/near_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_near_me"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="16dp" android:paddingLeft="8dp"
                android:paddingTop="16dp" android:paddingRight="8dp"
                android:paddingBottom="16dp" android:textSize="20sp" android:textStyle="bold"
                android:fontFamily="@font/roboto" android:textColor="@color/colorPrimaryDark"/>
        <TextView
                android:text="@string/hot_spots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_hot_spots"
                android:paddingLeft="8dp" android:paddingTop="16dp" android:paddingRight="8dp"
                android:paddingBottom="16dp" android:fontFamily="@font/roboto" android:textSize="20sp"
                android:textStyle="bold" android:textColor="@color/colorPrimaryDark"/>
        <TextView
                android:text="@string/the_directory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_the_directory"
                app:layout_constraintStart_toEndOf="@+id/tv_hot_spots"
                android:layout_marginStart="0dp" android:paddingTop="16dp"
                android:paddingRight="8dp" android:paddingBottom="16dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingLeft="8dp" android:textColor="@color/colorPrimaryDark"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>