<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackground">

        <ImageView
                android:id="@+id/appLogo"
                android:layout_width="178dp"
                android:layout_height="109dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toTopOf="@+id/et_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline_1"
                app:srcCompat="@drawable/ic_blackfyre_logo"
                tools:srcCompat="@drawable/ic_blackfyre_logo" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/cardview_compat_inset_shadow"
                app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.98" />

        <EditText
                android:id="@+id/et_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/username"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/et_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appLogo"
                app:layout_constraintVertical_chainStyle="spread"
                tools:text="@string/username" />

        <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/signInWithEmail"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toTopOf="@+id/et_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_name"
                tools:text="@string/signInWithEmail" />

        <EditText
                android:id="@+id/ed_confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/colorSecondary"
                android:contentDescription="@string/forgotPassword"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/forgotPassword"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/btn_register"
                app:layout_constraintEnd_toEndOf="@+id/et_password"
                app:layout_constraintHorizontal_bias="0.393"
                app:layout_constraintStart_toStartOf="@+id/et_password"
                app:layout_constraintTop_toBottomOf="@+id/et_password"
                tools:text="@string/forgotPassword" />

        <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/ed_confirmPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                tools:text="@string/password" />

        <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corners_imagebutton"
                android:text="@string/signup"
                app:layout_constraintBottom_toTopOf="@+id/tx_forgot_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />

        <TextView
                android:id="@+id/tx_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/forgotPassword"
                app:layout_constraintBottom_toTopOf="@+id/guideline_2"
                app:layout_constraintEnd_toEndOf="@+id/btn_register"
                app:layout_constraintStart_toStartOf="@+id/btn_register" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>