<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/mainBackground">

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.88" />

        <ImageView
                android:id="@+id/user_img_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_blackfyre_logo"
                tools:srcCompat="@drawable/ic_blackfyre_logo" />

        <androidx.appcompat.widget.SearchView
                android:id="@+id/tv_hotspot_search"
                style="@style/search_view_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/rounded_corner_for_search_view_widget"
                android:contentDescription="@string/search_hotspot"
                android:foregroundTint="@color/colorWhite"
                android:queryHint="@string/search_hotspot"
                android:theme="@style/Base.Widget.AppCompat.SearchView.ActionBar"
                app:layout_constraintBottom_toBottomOf="@+id/user_img_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:queryBackground="@color/colorDivider"
                app:searchHintIcon="@drawable/ic_search_white"
                app:searchIcon="@drawable/ic_search_white"
                app:voiceIcon="@drawable/ic_voice_icon" />

        <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_black_business"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/tv_hotspot_search"
                app:layout_constraintEnd_toEndOf="@+id/tv_hotspot_search"
                app:layout_constraintStart_toStartOf="@+id/tv_hotspot_search" />

        <ImageView
                android:id="@+id/imageView8"
                style="@style/search_view_style"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_img_view"
                app:srcCompat="@drawable/rounded_hospot_icon"
                tools:srcCompat="@drawable/rounded_hospot_icon" />

        <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotspot"
                android:textAllCaps="true"
                android:textColor="@color/colorSecondary"
                app:layout_constraintEnd_toEndOf="@+id/imageView8"
                app:layout_constraintStart_toStartOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/mainBackground"
                android:theme="@style/search_view_style"
                app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.454"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                app:layout_constraintVertical_bias="0.506" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapView"
                app:layout_constraintVertical_bias="0.0"
                app:menu="@menu/bottom_nav_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>